// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/manifestFiles download files correctly 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  Download
</a>
`;

exports[`components/manifestFiles download with correct params form normal file: isJsonValidator false 1`] = `
Object {
  "CellComponent": [Function],
  "columns": Array [
    Object {
      "Header": "Identifier",
      "accessor": "identifier",
    },
    Object {
      "Header": "File Name",
      "accessor": "label",
    },
    Object {
      "Header": "File Version",
      "accessor": "version",
      "maxWidth": 100,
    },
    Object {
      "Cell": [Function],
      "Header": "Created at",
      "accessor": "createdAt",
      "maxWidth": 100,
    },
    Object {
      "Header": "Module",
      "accessor": [Function],
      "disableSortBy": true,
      "maxWidth": 100,
    },
    Object {
      "Header": "Edit",
      "accessor": [Function],
      "disableSortBy": true,
      "maxWidth": 80,
    },
    Object {
      "Header": " ",
      "accessor": [Function],
      "disableSortBy": true,
      "maxWidth": 80,
    },
  ],
  "data": Array [
    Object {
      "createdAt": "Jun 19, 2020, 4:23:22 PM",
      "form_relation": "",
      "id": "53",
      "identifier": "reveal-test-file.json",
      "isDraft": false,
      "isJsonValidator": false,
      "jursdiction": "",
      "label": "test publish",
      "module": "",
      "version": "1.0.27",
    },
    Object {
      "createdAt": "Jun 19, 2020, 12:31:37 PM",
      "form_relation": "",
      "id": "52",
      "identifier": "test-form-1.json",
      "isDraft": false,
      "isJsonValidator": false,
      "jursdiction": "",
      "label": "test form",
      "module": "",
      "version": "1.0.26",
    },
  ],
  "hasChildren": [Function],
  "identifierField": "id",
  "linkerField": "id",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": null,
  "useDrillDown": false,
}
`;

exports[`components/manifestFiles renders without crashing when connected to store: isJsonValidator true 1`] = `
Object {
  "CellComponent": [Function],
  "columns": Array [
    Object {
      "Header": "Identifier",
      "accessor": "identifier",
    },
    Object {
      "Header": "File Name",
      "accessor": "label",
    },
    Object {
      "Header": "File Version",
      "accessor": "version",
      "maxWidth": 100,
    },
    Object {
      "Cell": [Function],
      "Header": "Created at",
      "accessor": "createdAt",
      "maxWidth": 100,
    },
    Object {
      "Header": "Edit",
      "accessor": [Function],
      "disableSortBy": true,
      "maxWidth": 80,
    },
    Object {
      "Header": " ",
      "accessor": [Function],
      "disableSortBy": true,
      "maxWidth": 80,
    },
  ],
  "data": Array [
    Object {
      "createdAt": "Jun 19, 2020, 4:23:22 PM",
      "form_relation": "",
      "id": "53",
      "identifier": "reveal-test-file.json",
      "isDraft": false,
      "isJsonValidator": false,
      "jursdiction": "",
      "label": "test publish",
      "module": "",
      "version": "1.0.27",
    },
    Object {
      "createdAt": "Jun 19, 2020, 12:31:37 PM",
      "form_relation": "",
      "id": "52",
      "identifier": "test-form-1.json",
      "isDraft": false,
      "isJsonValidator": false,
      "jursdiction": "",
      "label": "test form",
      "module": "",
      "version": "1.0.26",
    },
  ],
  "hasChildren": [Function],
  "identifierField": "id",
  "linkerField": "id",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": null,
  "useDrillDown": false,
}
`;
